--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -21,6 +21,11 @@
             <li><a href="/favorites">Избранное</a></li>
             {% if 'ROLE_ADMIN' in app.user.roles %}
                 <li><a href="/teacher/verify">Проверка преподавателей</a></li>
+                <li><a href="/university/add">Добавление вуза</a></li>
+                <li><a href="/achievement/add">Добавление достежния</a></li>
+            {% endif %}
+            {% if 'ROLE_ADMIN' in app.user.roles %}
+                <li><a href="/achievement/add">Добавление достежния</a></li>
             {% endif %}
         {% endif %}
     </ul>
