--- a/templates/university/create.profile.html.twig
+++ b/templates/university/create.profile.html.twig
@@ -7,7 +7,7 @@
             <input type="text" id="address" name="address" placeholder="Введите адрес университета" required><br>
             <input type="text" id="city" name="city" placeholder="Введите город университета" required><br><br>
             <label for="photo">Загрузить фото:</label><br>
-            <input type="file" id="photo" name="photo"><br><br>
+            <input type="file" id="photo" name="photo" required><br><br>
             <button type="submit">Добавить университет</button>
         </form>
     </div>
@@ -80,16 +80,6 @@
 
     </script>
     <style>
-
-
-        {% if not has_edit %}
-        div > button {
-            display: none;
-        }
-
-        {% endif %}
-
-
         .basic-in {
             width: 100%;
             height: 40px;
