added border for rating

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -67,6 +67,7 @@
 
 <div class="top-students">
     <h2>Топ студентов</h2>
+    <div class="student-container">
     <div class="student">
         <img src="../public/static/profile1.jpg" alt="Фото профиля">
         <div class="student-info">
@@ -76,6 +77,7 @@
             <p>ВУЗ: МГУ</p>
             <p>Факультет: Физика</p>
         </div>
+    </div>
     </div>
 </div>
 
