--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -898,6 +898,10 @@ footer {
 /* Стили для рейтинга студентов */
 .ranking {
     margin-top: 20px;
+    border: 1px solid #ccc; /* Добавляем рамку */
+    border-radius: 8px; /* Закругляем углы */
+    padding: 20px; /* Добавляем отступы внутри блока */
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1); /* Добавляем тень */
 }
 
 .ranking h2 {
