--- a/templates/evt/feed.html.twig
+++ b/templates/evt/feed.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block title %}
+Мероприятия
+{% block %}
 {% block body %}
     <div class="button-container">
         {% if app.user is defined %}
