--- a/templates/shared/rating.html.twig
+++ b/templates/shared/rating.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block title %}
+Рейтинг
+{% block %}
 {% block body %}
     <div class="filters">
         <h2>Фильтры</h2>
