--- a/templates/evt/view.html.twig
+++ b/templates/evt/view.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block title %}
+Мероприятие
+{% block %}
 {% block body %}
     <div class="publication-form">
         <h2 for="author">Организатор: {{ event.creator.lastname }} {{ event.creator.firstname }}</h2>
