--- a/templates/publish/student.add.html.twig
+++ b/templates/publish/student.add.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block title %}
+Добавление публикации
+{% block %}
 {% block body %}
     <div class="publication-form">
         <div class="head">
