--- a/templates/publish/view.html.twig
+++ b/templates/publish/view.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block title %}
+Публикация
+{% block %}
 {% block body %}
     <div class="publication-form">
         <h2 for="author">Автор: {{ publish.student.lastname }} {{ publish.student.firstname }}</h2>
