--- a/templates/shared/favorite.html.twig
+++ b/templates/shared/favorite.html.twig
@@ -1,5 +1,8 @@
 {% extends 'base.html.twig' %}
 {% block body %}
+{% block title %}
+Избранное
+{% block %}
 <main>
     <section id="events">
         <h2>Мероприятия</h2>
