--- a/templates/shared/index.html.twig
+++ b/templates/shared/index.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block title %}
+Главная
+{% block %}
 {% block body %}
     <div class="landing-description">
         <div class="landing-buttons">
