--- a/templates/student/profile.html.twig
+++ b/templates/student/profile.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block title %}
+Профиль
+{% block %}
 {% block body %}
     <div class="student-profile">
         <h2>Профиль студента</h2>
