--- a/templates/student/show.html.twig
+++ b/templates/student/show.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block title %}
+Просмотр студентов
+{% block %}
 {% block body %}
 <div class="filters" style="display: none">
     <h2>Фильтры</h2>
