--- a/templates/teacher/verification.html.twig
+++ b/templates/teacher/verification.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block title %}
+Верификация преподавателей
+{% block %}
 {% block body %}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
