--- a/templates/university/create.profile.html.twig
+++ b/templates/university/create.profile.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block title %}
+Добавление вуза
+{% block %}
 {% block body %}
     <div class="university-info">
         <form method="post">
