--- a/templates/university/profile.html.twig
+++ b/templates/university/profile.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% block title %}
+Профиль
+{% block %}
 {% block body %}
     <div class="landing-info">
         <h1 class="animated-heading">Добро пожаловать в ВУЗ!</h1>
