--- a/templates/evt/add.html.twig
+++ b/templates/evt/add.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}
 Добавление мероприятия
-{% block %}
+{% endblock %}
 {% block body %}
     <div class="publication-form">
         <div class="head">
