--- a/templates/shared/favorite.html.twig
+++ b/templates/shared/favorite.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 {% block title %}
 Избранное
-{% block %}
+{% endblock %}
 <main>
     <section id="events">
         <h2>Мероприятия</h2>
