--- a/templates/student/search.html.twig
+++ b/templates/student/search.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}
 Поиск
-{% block %}
+{% endblock %}
 {% block body %}
 <div class="search-student">
     <h2>Поиск студента</h2>
