--- a/templates/evt/feed.html.twig
+++ b/templates/evt/feed.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}
 Мероприятия
-{% block %}
+{% endblock %}
 {% block body %}
     <div class="button-container">
         {% if app.user is defined %}
