--- a/templates/evt/view.html.twig
+++ b/templates/evt/view.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}
 Мероприятие
-{% block %}
+{% endblock %}
 {% block body %}
     <div class="publication-form">
         <h2 for="author">Организатор: {{ event.creator.lastname }} {{ event.creator.firstname }}</h2>
