--- a/templates/publish/feed.html.twig
+++ b/templates/publish/feed.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}
 Публикации
-{% block %}
+{% endblock %}
 {% block body %}
     <div class="button-container">
         <button class="add-publication-button">Добавить публикацию</button>
