--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}
 Вход
-{% block %}
+{% endblock %}
 {% block body %}
 <div class="login-form">
     <h2>Авторизация</h2>
