--- a/templates/security/login_registration.html.twig
+++ b/templates/security/login_registration.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}
 Регистрация
-{% block %}
+{% endblock %}
 {% block body %}
 <div class="registration-form">
     <h2>Регистрация</h2>
