--- a/templates/shared/index.html.twig
+++ b/templates/shared/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}
 Главная
-{% block %}
+{% endblock %}
 {% block body %}
     <div class="landing-description">
         <div class="landing-buttons">
