--- a/templates/shared/rating.html.twig
+++ b/templates/shared/rating.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}
 Рейтинг
-{% block %}
+{% endblock %}
 {% block body %}
     <div class="filters">
         <h2>Фильтры</h2>
