--- a/templates/university/create.profile.html.twig
+++ b/templates/university/create.profile.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}
 Добавление вуза
-{% block %}
+{% endblock %}
 {% block body %}
     <div class="university-info">
         <form method="post">
