--- a/templates/university/search.html.twig
+++ b/templates/university/search.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}
 Поиск вуза
-{% block %}
+{% endblock %}
 {% block body %}
 
     <div class="search-university">
