--- a/templates/shared/index.html.twig
+++ b/templates/shared/index.html.twig
@@ -33,9 +33,10 @@
         </div>
     </div>
 
-
-    <div class="top-students" style="display: flex; flex-flow: wrap; gap: 10px">
+    <div style="display: flex; justify-content: center; margin: 10px">
         <h2>Топ студентов</h2>
+    </div>
+    <div class="top-students" style="display: flex; flex-flow: wrap; gap: 10px">
         {% for student in top_students %}
             <div class="student-container">
                 <div class="student">
