--- a/templates/student/profile.html.twig
+++ b/templates/student/profile.html.twig
@@ -6,9 +6,9 @@
     <div class="student-profile">
         <h2>Профиль
             {% if 'ROLE_STUDENT' in  user.roles %}
-                Студента
+                пользователя
             {% else %}
-                Преподавателя
+                Компании
             {% endif %}
             </h2>
         <div class="student-info">
@@ -24,30 +24,17 @@
                 {% endif %}
             </div>
             <div class="profile-details">
-                <p><strong>Имя и фамилия:</strong> {{ user.lastname }} {{ user.firstname }}</p>
-                {% if 'ROLE_STUDENT' in  user.roles %}
-                    <p><strong>Факультет:</strong> {{ user.teachGroup.kafedra.faculty.name }}</p>
-                    <p><strong>Кафедра:</strong> {{ user.teachGroup.kafedra.name }}</p>
-                    <p><strong>Поток:</strong> {{ user.teachGroup.streamYear }}</p>
-                    <p><strong>Группа:</strong> <a
-                                href="/student/super_filter?group={{ user.teachGroup.name }}">{{ user.teachGroup.name }}</a></p>
-                    <p><strong>Место в рейтинге по потоку:</strong> 5</p>
-                    <p><strong>Общее количество «звездочек»:</strong> {{ user.star }}</p>
-                    <p><strong>Достижения в науке:</strong> <a href="/achievement/get">Посмотреть список (20)</a></p>
-                    <p><strong>Достижения в спорте:</strong> <a href="/achievement/get">Посмотреть список (10)</a></p>
-                    <p><strong>Достижения в творчестве:</strong> <a href="/achievement/get">Посмотреть список
-                            (15)</a></p>
-                    <p><strong>Достижения в волонтерстве:</strong> <a href="/achievement/get">Посмотреть список
-                            (5)</a></p>
+                <p><strong>Имя и фамилия:</strong>
+                    <p>{{ user.lastname }} {{ user.firstname }}</p>
+                {% if not user.university %}
                 {% else %}
-                    <p><strong>Университет:</strong><a href="/university/view/{{  user.university.id  }}">{{ user.university.name }}</a> </p>
+                    <p><strong>Компания:</strong><a href="/university/view/{{  user.university.id  }}">{{ user.university.name }}</a> </p>
                 {% endif %}
-
             </div>
         </div>
         <div class="publication-photos">
             <div style="display: flex;justify-content: space-between; align-items: center">
-                <h3>Фотографии публикаций студента</h3>
+                <h3>Фотографии публикаций </h3>
                 {% if app.user %}
                 <a href="/student/publish/add" class="upload-button">Добавить публикацию</a>
                 {% endif %}
