--- a/templates/achievment/check.html.twig
+++ b/templates/achievment/check.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
 <div class="achievement-info">
     <h2>Отображение всех достижений студента</h2>
+{#    TODO("Подтягивать достижения из базы данных")    #}
     <div id="achievementsDisplay">
         <ul>
             <li>Наука: Исследование нового материала</li>
