--- a/templates/publish/feed.html.twig
+++ b/templates/publish/feed.html.twig
@@ -1,33 +1,12 @@
 {% extends 'base.html.twig' %}
 {% block title %}
-Публикации
+    Публикации
 {% endblock %}
 {% block body %}
     <div class="button-container">
-        <button class="add-publication-button">Добавить публикацию</button>
-        <div class="filter">
-            <div class="filter-options">
-                <select name="city" id="city-select">
-                    <option value="" selected>Выберите город</option>
-                    {% for city in cities %}
-                        <option value="{{ city.city }}">{{ city.city }}</option>
-                    {% endfor %}
-                </select>
-                <select name="university" id="university-select">
-                    <option value="" selected>Выберите вуз</option>
-                    {% for university in universities %}
-                        <option value="{{ university.name }}">{{ university.name }}</option>
-                    {% endfor %}
-                </select>
-                <select name="faculty" id="faculty-select">
-                    <option value="" selected>Выберите факультет</option>
-                    {% for faculty in faculties %}
-                        <option value="{{ faculty.name }}">{{ faculty.name }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <button id="search-button">Поиск</button>
-        </div>
+        {% if app.user %}
+            <button class="add-publication-button">Добавить публикацию</button>
+        {% endif %}
     </div>
 
     <div class="publications" id="publications-container">
